...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ocrTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#66000000"
        android:padding="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Get Release" />

        <Button
            android:id="@+id/setBinButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Set Bin"
            tools:visibility="visible" />

...
