...

            <Button
                android:id="@+id/bin19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="19" />

            <Button
                android:id="@+id/bin20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="20" />

            <Button
                android:id="@+id/bin21"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
...
