...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Canny Low" />
        </LinearLayout>
        <com.google.android.material.slider.Slider
            android:id="@+id/cannyLowSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="20"
            android:valueTo="100"
            android:stepSize="5" />

...
            android:layout_height="wrap_content"
            android:valueFrom="0"
            android:valueTo="1"
            android:stepSize="0.05" />

        <Button
            android:id="@+id/applyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Apply" />

    </LinearLayout>
</ScrollView>
...
